--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --disable-host-check",
     "build": "ng build --prod",
-    "push": "scp -rv dist/ addictaf@168.62.168.90:/home/addictaf/web/addictaf/fe",
+    "push": "scp -rv dist/adictaf/ addictaf@168.62.168.90:/home/addictaf/web/addictaf/fe",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
